Performance improving: deserialization of ArrayUjo is about 36% faster in compare to JAXB .